fixing scroll on mobile.

--- a/client/styles/app.styles.less
+++ b/client/styles/app.styles.less
@@ -15,18 +15,11 @@ main > section:first-child {
   position: fixed;
   width: 90%;
   margin: auto;
-
-  .webChat {
-      z-index: 1;
-      position: fixed;
-      width: 90%;
-      bottom: 0;
-  }
 }
 
 header {
    background: #fff;
-   z-index: 2;
+   z-index: 1;
    border-bottom: 1px solid #3b5998;
    position: fixed;
    width: 90%;
